# rusty-buber-dinner

./: .env.example  Cargo.toml  readme.md
_requests/auth/: login.http  register.http
_requests/health/: health.http
application/: Cargo.toml  rustfmt.toml
application/src/: abstractions.rs  dependencies.rs  error.rs  lib.rs  prelude.rs
application/src/services/: authentication.rs
application/src/services/authentication/: abstractions.rs  mod.rs
domain/: Cargo.toml
domain/src/: error.rs  lib.rs  prelude.rs
domain/src/aggregates/user/value_objects/: mod.rs
domain/src/shared/: mod.rs
domain/src/shared/value_objects/: id.rs  mod.rs  traits.rs
infrastructure/: Cargo.toml
infrastructure/src/: dependencies.rs  error.rs  lib.rs  prelude.rs
infrastructure/src/authentication/: jwt.rs
infrastructure/src/config/: jwt_configuration.rs  mod.rs
infrastructure/src/provider/: datetime.rs  id.rs  mod.rs
presentation/: error.rs  main.rs
presentation/auth/: mod.rs  request.rs  response.rs
presentation/health/: mod.rs  schemas.rs
