[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application ={ path = "../application"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
envconfig = "0.10.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate"] }
validator = { version = "0.18.1", features = ["derive"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v7"] }
chrono = "0.4.38"

